Update to lwjgl snapshot to fix issue with amd drivers/sdl (closes #2699)